--- a/style.css
+++ b/style.css
@@ -19,37 +19,130 @@
     border: 0;
 }
 
+html, body {
+    height: 100%; /* This along with (body - Height: 100vh) makes the whole browser window be used */
+    margin: 0;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh; /* This along with (html - height: 100%) makes the whole browser window be used */
+} /* Splits the screen into vertical sections: Header, Main, Footer */
+
 header {
     background-color: #504231;
     color: silver;
     text-align: center;
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
     height: 100px;
+}
+
+h1 {
+    font-size: 36px;
 }
 
 main {
     background-color: #c8a47b;
     text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+}
+
+@keyframes fadeSlideIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+h3 {
+    animation: fadeSlideIn 1.5s ease-out;
+    padding-bottom: 20px;
+    font-size: 24px;
+}
+
+img {
+    max-width: 50%;
+    height: auto;
+    transition: transform 1s ease;
+}
+
+img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+.button {
+    background-color: #e4d2bd;
+    color: black;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: #ccbca9 0.3s ease, transform 0.3s ease box-shadow 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    font-size: medium;
+    font-weight: 500;
+}
+
+.button:hover {
+    background-color: #ccbca9;
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+}
+
+@keyframes bounceIn {
+    0% {
+        transform: scale(0.5) translateY(-100px);
+        opacity: 0;
+    }
+    50% {
+        transform: scale(1.1) translateY(20px);
+    }
+    100% { 
+        transform: scale(1) translateY(0);
+        opacity: 1;
+    }
+}
+
+.fun-button {
+    background-color: #64523e;
+    color: black;
+    border-radius: 8px;
+    padding: 12px 24px;
+    font-size: 16px;
+    cursor: pointer;
+    animation: bounceIn 1.2s ease-out;
+    transition: #64523e 0.4s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
+}
+
+.fun-button:hover {
+    background-color: #ccbca9;
+    transform: rotate(-3deg) scale(1.1);
+    box-shadow:  0 6px 14px rgba(0, 0, 0, 0.5);
 }
 
 footer {
     background-color: #504231;
     color: silver;
     text-align: center;
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
     height: 100px;
-}
-
-img {
-    max-width: 50%;
-    height: auto;
-    padding: 30px;
 }
